# webssh-rs

./: .gitignore  Cargo.toml  README.md  settings.json
src/: main.rs  settings.rs  ssh.rs  websocket.rs
src/ssh/: channel.rs  error.rs  mod.rs  session.rs
static/: index.html
