[package]
name = "webssh-rs"
version = "0.1.0"
edition = "2021"
authors = ["WebSSH Rust Team"]
description = "A web-based SSH client written in Rust"

[dependencies]
# Crypto dependencies for fingerprint calculation
sha2 = "0.10"
md5 = "0.7"
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.13"
thiserror = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
uuid = { version = "1.6.1", features = ["v4"] }
